fixed mobile layout to not overflow.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,7 +30,7 @@
 }
 
 .input-field {
-  @apply mx-2 w-full rounded-md bg-neutral-800 p-2 mb-1 text-white focus:outline-none focus:ring-2 focus:ring-neutral-500;
+  @apply rounded-md bg-neutral-800 p-2 mb-1 text-white focus:outline-none focus:ring-2 focus:ring-neutral-500;
 }
 
 .button {
@@ -81,7 +81,7 @@
     display: none;
   }
 
-  .grid-item .input-field {
+  .grid-item .input-field mx-2 {
     @apply p-1;
   }
 
